Fix higher-contrast light Kenobi bg

--- a/_sass/_pages/_starwars.scss
+++ b/_sass/_pages/_starwars.scss
@@ -72,6 +72,7 @@ html.starwars.kenobi {
     background: none;
 
     &::before {
+      background-color: var(--background-color);
       background-image:
         linear-gradient(rgba(var(--rgb-bg), 0.75), var(--background-color)),
         url("/images/starwars/kenobi.jpg");
